    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
      
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                
                <EditText
                    android:id="@+id/filename"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top|left"
                    android:layout_weight="0"
                    android:ems="10"
                    android:text="@string/txt_filename" >
                </EditText>
                <TextView
                    android:id="@+id/console"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_log" />

            </LinearLayout>
        </ScrollView>
      
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/txt_selected" />

                <Spinner
                    android:id="@+id/modelspr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/movebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_move" 
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/rotatebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_rotate" 
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/scalebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_scale" 
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/capture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_capture" 
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/change"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_modechange" />

        </LinearLayout>
        
    </LinearLayout>
